@@ -1,4 +1,4 @@
-DIST poloka-0.4.3.tar.gz 1151942 RMD160 46ffbbed01bc0699ece4a1d50ab146f7fdcf63cc SHA1 9d978dc062e3cd0a07a95df6590486e3131f9c29 SHA256 bf66ced7d9c29a369cfd4849e69214141429728aaeb18966c9820796a6187944
-EBUILD poloka-0.4.3.ebuild 1084 RMD160 b619b348206125f4663fe88dca9d12e084acd0af SHA1 08400d807b40ddc0d0c61b6349d29f5b2d00589a SHA256 e7afe2a6503a449f4d17146b7ff51d3321cc0a16f228550c8ce4847fb3c1c7d7
-MISC ChangeLog 567 RMD160 374788268fffb01231b7348b4022413165d62933 SHA1 43acd7211ca9dd13a1aa3b7f5df32d6df841e8ea SHA256 3811f115caef59711c2efc89ebe5f858dda6aae8338a9819f00d60c05b33662b
+DIST poloka-0.6.3.tar.gz 1192677 RMD160 43e65f4fdaae7b5e3c9efb41c8307b936c90d801 SHA1 187dda9cfb8d93eb92fb790831e39a71cd58fb2c SHA256 49e7a26ffd248d202ab819a5ffab934449e60137b980f7bcb9271c95aec4346c
+EBUILD poloka-0.6.3.ebuild 1011 RMD160 12ec99146053ae9c46470b15cb30a96a87145a21 SHA1 a0988174a0c02c7f6b4e2fbea9ecad71e97b850c SHA256 bcc7bc18a64fe77b1553b27e3d1a90d48fada6f9c07bb12300f557a8fd2bd594
+MISC ChangeLog 732 RMD160 fac9c7accefc0c57403d3f8aa9e054d0f9d2b95f SHA1 5736ac7458a45a936a0a187114855216b890ea97 SHA256 3390061369abfadc3ad00f0c982aafe6257383f759fe4a4088d5774146650114
 MISC metadata.xml 865 RMD160 89838bfa87dd8d2ed21688d3e7992db11c8e0998 SHA1 c310a2ed23531e615a8a2df1b8edaf4e970ecf99 SHA256 72024cd13b5a091949f40cc2b9e9610004a309680107e828c4497dab601edd2b
