@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*poloka-0.6.3 (03 Aug 2011)
+
+  03 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.4.3.ebuild,
+  +poloka-0.6.3.ebuild:
+  Version bump. Switched to EAPI4
+
 *poloka-0.4.3 (08 Feb 2011)
 
   08 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.4.1.ebuild,
